--- a/DeployTask/Sriracha.DeployTask.Azure/Sriracha.DeployTask.Azure.csproj
+++ b/DeployTask/Sriracha.DeployTask.Azure/Sriracha.DeployTask.Azure.csproj
@@ -89,8 +89,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="tools\Init.ps1" />
     <None Include="packages.config" />
-    <None Include="Nuget\Sriracha.DeployTask.Azure.csproj.nuspec" />
+    <None Include="nuget\Sriracha.DeployTask.Azure.csproj.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Sriracha.Data\Sriracha.Data.csproj">
@@ -103,6 +104,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
