--- a/DeployTask/Sriracha.DeployTask.Azure/packages.config
+++ b/DeployTask/Sriracha.DeployTask.Azure/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" />
   <package id="MMDB.Azure.Management" version="1.0.13.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="3.1.0.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
 </packages>
