--- a/Sriracha.Data/packages.config
+++ b/Sriracha.Data/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
-  <package id="Common.Logging" version="2.3.1" targetFramework="net45" />
-  <package id="CsvHelper" version="2.10.0" targetFramework="net45" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="CsvHelper" version="2.11.1.1" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
