--- a/Sriracha.Web/Sriracha.Web.csproj
+++ b/Sriracha.Web/Sriracha.Web.csproj
@@ -55,6 +55,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Nancy.1.1\lib\net40\Nancy.dll</HintPath>
     </Reference>
+    <Reference Include="Nancy.Hosting.Aspnet">
+      <HintPath>..\packages\Nancy.Hosting.Aspnet.1.1\lib\net40\Nancy.Hosting.Aspnet.dll</HintPath>
+    </Reference>
+    <Reference Include="Nancy.ViewEngines.Razor">
+      <HintPath>..\packages\Nancy.Viewengines.Razor.1.1\lib\net40\Nancy.ViewEngines.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -68,6 +74,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.2.0.30506.0\lib\net40\System.Web.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -77,11 +87,39 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="stylesheets\bootstrap\bootstrap-theme.css" />
+    <Content Include="stylesheets\bootstrap\bootstrap-theme.min.css" />
+    <Content Include="stylesheets\bootstrap\bootstrap.css" />
+    <Content Include="stylesheets\bootstrap\bootstrap.min.css" />
+    <Content Include="stylesheets\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Icon.png" />
     <Content Include="packages.config" />
-    <None Include="scripts\jquery-2.1.3.intellisense.js" />
-    <Content Include="scripts\jquery-2.1.3.js" />
-    <Content Include="scripts\jquery-2.1.3.min.js" />
-    <Content Include="scripts\jquery-2.1.3.min.map" />
+    <Content Include="App_Readme\Handlebarsjs_README.md" />
+    <Content Include="App_Readme\Handlebarsjs_LICENSE" />
+    <Content Include="stylesheets\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="stylesheets\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="stylesheets\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="stylesheets\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="stylesheets\bootstrap\bootstrap-theme.css.map" />
+    <Content Include="stylesheets\bootstrap\bootstrap.css.map" />
+    <None Include="scripts\vendor\jquery\jquery-2.1.1.intellisense.js" />
+    <Content Include="scripts\vendor\bootstrap\bootstrap.js" />
+    <Content Include="scripts\vendor\bootstrap\bootstrap.min.js" />
+    <Content Include="scripts\vendor\bootstrap\npm.js" />
+    <Content Include="scripts\vendor\ember\ember.debug.js" />
+    <Content Include="scripts\vendor\ember\ember.min.js" />
+    <Content Include="scripts\vendor\ember\ember.prod.js" />
+    <Content Include="scripts\vendor\ember\handlebars.amd.js" />
+    <Content Include="scripts\vendor\ember\handlebars.amd.min.js" />
+    <Content Include="scripts\vendor\ember\handlebars.js" />
+    <Content Include="scripts\vendor\ember\handlebars.min.js" />
+    <Content Include="scripts\vendor\ember\handlebars.runtime.amd.js" />
+    <Content Include="scripts\vendor\ember\handlebars.runtime.amd.min.js" />
+    <Content Include="scripts\vendor\ember\handlebars.runtime.js" />
+    <Content Include="scripts\vendor\ember\handlebars.runtime.min.js" />
+    <Content Include="scripts\vendor\jquery\jquery-2.1.1.js" />
+    <Content Include="scripts\vendor\jquery\jquery-2.1.1.min.js" />
+    <Content Include="scripts\vendor\jquery\jquery-2.1.1.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -90,38 +128,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Readme\Handlebarsjs_README.md" />
-    <Content Include="App_Readme\Handlebarsjs_LICENSE" />
-    <Content Include="content\bootstrap-theme.css" />
-    <Content Include="content\bootstrap-theme.min.css" />
-    <Content Include="content\bootstrap.css" />
-    <Content Include="content\bootstrap.min.css" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="content\bootstrap-theme.css.map" />
-    <Content Include="content\bootstrap.css.map" />
-    <Content Include="scripts\bootstrap.js" />
-    <Content Include="scripts\bootstrap.min.js" />
-    <Content Include="scripts\ember.debug.js" />
-    <Content Include="scripts\ember.min.js" />
-    <Content Include="scripts\ember.prod.js" />
-    <Content Include="scripts\handlebars.amd.js" />
-    <Content Include="scripts\handlebars.amd.min.js" />
-    <Content Include="scripts\handlebars.js" />
-    <Content Include="scripts\handlebars.min.js" />
-    <Content Include="scripts\handlebars.runtime.amd.js" />
-    <Content Include="scripts\handlebars.runtime.amd.min.js" />
-    <Content Include="scripts\handlebars.runtime.js" />
-    <Content Include="scripts\handlebars.runtime.min.js" />
-    <Content Include="scripts\npm.js" />
-    <Content Include="views\home\index.html" />
+    <None Include="views\home\index.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -155,6 +170,13 @@
     </PropertyGroup>
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>
+if $(ConfigurationName) == Debug (
+xcopy /s /y /R "$(SolutionDir)packages\Nancy.Viewengines.Razor.1.1\BuildProviders\Nancy.ViewEngines.Razor.BuildProviders.dll" "$(ProjectDir)bin\"
+xcopy /s /y /R "$(SolutionDir)packages\Nancy.Viewengines.Razor.1.1\lib\Net40\Nancy.ViewEngines.Razor.dll" "$(ProjectDir)bin\"
+)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
