--- a/Sriracha.Web/packages.config
+++ b/Sriracha.Web/packages.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.1" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
-  <package id="EmberJs" version="1.9.0" targetFramework="net45" />
+  <package id="EmberJs" version="1.11.1" targetFramework="net45" />
   <package id="Handlebars.js" version="2.0.0.0" targetFramework="net45" />
-  <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="MMDB.Shared" version="2.0.0.20" targetFramework="net45" />
   <package id="Nancy" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Hosting.Aspnet" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
