--- a/Sriracha.Server/App.config
+++ b/Sriracha.Server/App.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
     <add key="WebPath" value="..\..\..\Sriracha.Web" />
-  </appSettings>
+  <add key="webPages:Enabled" value="false" /></appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -14,4 +19,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.web.webPages.razor>
+    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+      <namespaces>
+        <add namespace="Nancy.ViewEngines.Razor" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor></configuration>
