--- a/Sriracha.Server/packages.config
+++ b/Sriracha.Server/packages.config
@@ -3,6 +3,7 @@
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
@@ -10,6 +11,7 @@
   <package id="Nancy" version="1.1" targetFramework="net45" />
   <package id="Nancy.Hosting.Owin" version="0.16.0" targetFramework="net45" />
   <package id="Nancy.Owin" version="1.1" targetFramework="net45" />
+  <package id="Nancy.Viewengines.Razor" version="1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Topshelf" version="3.1.4" targetFramework="net45" />
